--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.0.0",
     "@react-three/xr": "^6.6.26",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "three": "^0.173.0"
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "three": "0.165.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.2",
-    "@types/three": "^0.173.0",
+    "@types/three": "0.165.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-react": "^4.3.4",
     "gh-pages": "^6.2.0",
