--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "gh-pages": "^6.2.0",
     "typescript": "^5.7.3",
-    "vite": "^5.4.14"
+    "vite": "^5.4.14",
+    "vitest": "^3.2.4"
   }
 }
