Migrate to @myers/r3f-tools shared library
- Replace local components with @myers/r3f-tools
- Remove local SplashScreen, GitHubBadge, and useXRSessionModeSupportedPolling
- Add emulator keyboard shortcut instructions to splash screen

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "@myers/r3f-tools": "github:myers/r3f-tools#v2",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.0.0",
     "@react-three/xr": "^6.6.26",
@@ -17,8 +18,8 @@
     "three": "0.165.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "~19.1.0",
+    "@types/react-dom": "~19.1.0",
     "@types/three": "0.165.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-react": "^4.3.4",
